--- a/GUI_QLHD/nbproject/project.properties
+++ b/GUI_QLHD/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GUI_QLHD
 excludes=
+file.reference.mssql-jdbc-9.4.0.jre16.jar=C:\\Users\\TEMP\\Downloads\\sqljdbc_9.4\\enu\\mssql-jdbc-9.4.0.jre16.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mssql-jdbc-9.4.0.jre16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
