--- a/GUI_QLHD/nbproject/private/private.properties
+++ b/GUI_QLHD/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\ThaiTran\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\huynh\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
