--- a/GUI_QLHD/nbproject/project.properties
+++ b/GUI_QLHD/nbproject/project.properties
@@ -36,13 +36,15 @@ excludes=
 file.reference.mssql-jdbc-9.4.0.jre11.jar=E:\\Downloads\\Compressed\\sqljdbc_9.4\\enu\\mssql-jdbc-9.4.0.jre11.jar
 file.reference.mssql-jdbc-9.4.0.jre16.jar=C:\\Users\\TEMP\\Downloads\\sqljdbc_9.4\\enu\\mssql-jdbc-9.4.0.jre16.jar
 file.reference.mssql-jdbc-9.4.0.jre16.jar-1=E:\\Downloads\\Compressed\\sqljdbc_9.4\\enu\\mssql-jdbc-9.4.0.jre16.jar
+file.reference.mssql-jdbc-9.4.0.jre16.jar-2=C:\\Users\\huynh\\OneDrive\\Desktop\\HCMUS - IT\\2021 - 2022\\Semester 1\\Java Application Programming\\Java IDE\\sqljdbc_9.4.0.0_enu\\sqljdbc_9.4\\enu\\mssql-jdbc-9.4.0.jre16.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-9.4.0.jre16.jar}:\
     ${file.reference.mssql-jdbc-9.4.0.jre11.jar}:\
     ${file.reference.mssql-jdbc-9.4.0.jre16.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mssql-jdbc-9.4.0.jre16.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
